# Python-Streamer

./: Readme.md  pyproject.toml
mulitystream-python/: __main__.py
mulitystream-python/stream/: inputstream.py  streamconfig.py
mulitystream-python/utils/: Consts.py
