[tool.poetry]
name = "multistream-python"
version = "0.1.0"
description = ""
authors = ["NicholasBlackburn1 <nickblackburn02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
pylivestream = "^1.11.4"
python-ffmpeg-video-streaming = "^0.1.15"
ffmpeg-python = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
